--- a/package.json
+++ b/package.json
@@ -4,12 +4,22 @@
   "private": true,
   "homepage": "https://laurenx22.github.io/updated-exercise-app",
   "dependencies": {
+    "@react-navigation/elements": "^2.3.3",
+    "@react-navigation/native": "^7.1.1",
+    "@react-navigation/native-stack": "^7.3.5",
+    "@react-navigation/stack": "^7.2.5",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-native": "^0.78.2",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.25.0",
+    "react-native-reanimated": "^3.17.2",
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.10.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -40,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.26.3",
     "gh-pages": "^6.3.0"
   }
 }
